--- a/src/styles/header/index.css
+++ b/src/styles/header/index.css
@@ -3,8 +3,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: transparent;
-    font-size: 50px;
+    font-size: 100px;
+    opacity: 0;
+    animation: 2s slideFade 1s forwards;
+    flex-basis: 50px;
+    min-height: 100%;
+    background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%), url('../../assets/img/smoke.jpeg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+@keyframes slideFade {
+    100% {
+        opacity: 1;
+        margin-top: 0;
+    }
 }
 
 .Header h1,
@@ -14,7 +29,7 @@ h3 {
 }
 
 hr {
-    width: 250px;
+    width: 5em;
     height: 3px;
     background-color: #ffef14;
     border: 0;
