--- a/src/styles/header/index.css
+++ b/src/styles/header/index.css
@@ -1,18 +1,22 @@
 .Header {
-    margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 100px;
-    opacity: 0;
-    animation: 2s slideFade 1s forwards;
     flex-basis: 50px;
-    min-height: 100%;
-    background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%), url('../../assets/img/smoke.jpeg');
+    background: linear-gradient(to right, rgba(247, 140, 160, 0.8) 0%, rgba(249, 116, 143, 0.8) 19%, rgba(253, 134, 140, 0.8) 60%, rgba(254, 154, 139, 0.8) 100%), url('../../assets/img/smoke.jpeg'), no-repeat, center;
     background-size: cover;
     background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    margin-top: 100px;
+    animation: 2s slideFade 1s forwards;
+    font-size: 50px;
+    min-height: 100vh;
 }
 
 @keyframes slideFade {
@@ -22,7 +26,7 @@
     }
 }
 
-.Header h1,
+.Header .hero h1,
 h3 {
     margin: 0;
     font-weight: 100;
