--- a/src/styles/footer/index.css
+++ b/src/styles/footer/index.css
@@ -32,3 +32,18 @@
     margin: 0;
     padding: 0;
 }
+
+#Footer a {
+    text-decoration: none;
+    color: rgba(247, 140, 160, 1)
+}
+
+#Footer h4 {
+    padding: 4px;
+}
+
+#Footer .contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
