--- a/src/styles/experience/index.css
+++ b/src/styles/experience/index.css
@@ -5,17 +5,63 @@
     background-attachment: fixed;
 }
 
-#Experience .jobs {
+#Experience .work {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 30px;
+}
+
+#Experience .work .jobs {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-#Experience .jobs .job-role .location {
-    padding: 12px;
+#Experience .work .positions {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: -100px;
+    justify-content: space-around;
 }
 
-#Experience .jobs .job-role h2 {
+#Experience .work .positions h3 {
+    margin: 0 30px 230px 30px;
+    position: relative;
+    top: 100px;
+    width: 200px;
+}
+
+#Experience .work .jobs .section1 {
+    margin: 0 100px 150px 100px;
+    position: relative;
+    top: 50px;
+    left: -50px;
+    width: 300px;
+}
+
+#Experience .work .jobs .section1 p {
+    padding: 0;
+    margin: 4px;
+}
+
+#Experience .work .jobs .section1 .place {
+    font-weight: 100;
+}
+
+#Experience .work .job-descriptions {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#Experience .work .job-descriptions ul {
+    margin: 0 0 60px 50px;
+    position: relative;
+    top: 30px;
+    left: -100px;
+    width: 420px;
+    line-height: 2;
     font-weight: 100;
 }
