--- a/src/styles/projects/index.css
+++ b/src/styles/projects/index.css
@@ -119,3 +119,19 @@
     padding-bottom: 15px;
     margin: 0;
 }
+
+@media only screen and (min-device-width : 0) and (max-device-width : 600px) {
+    #Projects .container .project .project-title {
+        font-size: 20px;
+    }
+
+    #Projects .container .project .description .synopsis {
+        padding: 0;
+    }
+
+    #Projects .container .project .detail {
+        padding-top: 40px;
+        margin: 0;
+        width: 100%;
+    }
+}
