--- a/src/styles/footer/index.css
+++ b/src/styles/footer/index.css
@@ -1,8 +1,43 @@
 #Footer {
+    padding: 10px 0;
+    color: rgba(247, 140, 160, 1);
+}
+
+#Footer .email-form form {
+    margin: 20px 0;
     display: flex;
     flex-direction: column;
-    padding: 20px 0;
-    color: rgba(247, 140, 160, 1);
+    justify-content: center;
+    align-items: center;
+}
+
+#Footer .email-form form input {
+    margin: 1px;
+    font-size: 16px;
+    border-radius: 4px;
+    padding: 10px 10px;
+    width: 50%;
+    border: 1px solid #cccccc;
+}
+
+#Footer .email-form form textarea {
+    margin: 20px 0;
+    font-size: 16px;
+    border-radius: 4px;
+    padding: 5px 10px;
+    width: 50%;
+    border: 1px solid #cccccc;
+}
+
+#Footer .email-form form button {
+    margin-bottom: 40px;
+    font-size: 16px;
+    border-radius: 4px;
+    padding: 15px 10px;
+    width: 30%;
+    border: none;
+    background-color: rgba(247, 140, 160, 1);
+    color: #fff;
 }
 
 #Footer .social {
@@ -46,4 +81,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+hr {
+    width: 100%;
+    height: 2px;
+    background-color: rgba(247, 140, 160, 1);
+    border: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
