repo rescue and tidy

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(to right, rgba(247, 140, 160, 0.8) 0%, rgba(249, 116, 143, 0.8) 19%, rgba(253, 134, 140, 0.8) 60%, rgba(254, 154, 139, 0.8) 100%), url('../../assets/img/smoke.jpeg'), no-repeat, center;
+    background: linear-gradient(to right, rgba(247, 140, 160, 0.8) 0%, rgba(249, 116, 143, 0.8) 19%, rgba(253, 134, 140, 0.8) 60%, rgba(254, 154, 139, 0.8) 100%), url('../assets/img/smoke.jpeg'), no-repeat, center;
     background-size: cover;
     background-attachment: fixed;
     color: #fff;
